frontend/src/styles/global.css
/* ... */
html {
  overflow-x: hidden;
}

#sidebar {
  position: fixed;
  top: 0;
  left: 0;
  right: auto;
  width: 280px;
  height: 100%;
  background: var(--nav-bg);
  z-index: 2000;
  transition: 0.3s ease;
  overflow-x: hidden;
  scrollbar-width: none;
}

html[dir="rtl"] #sidebar {
  right: 0;
  left: auto;
}

#sidebar::--webkit-scrollbar {
  display: none;
}

#sidebar.hide {
  width: 60px;
}

#sidebar .brand {
  font-size: 24px;
  font-weight: 700;
  height: 56px;
  display: flex;
  align-items: center;
  color: var(--blue);
  position: sticky;
  top: 0;
  left: 0;
  background: var(--nav-bg);
  z-index: 500;
  padding-bottom: 20px;
  box-sizing: content-box;
  gap: 10px;
  padding-left: 15px;
  transition: 0.3s all;
}

html[dir="rtl"] #sidebar .brand {
  right: 0;
  left: auto;
  padding-right: 15px;
  padding-left: 0;
}

#sidebar.hide .brand {
  gap: 25px;
}

#sidebar .side-menu {
  width: 100%;
  margin-top: 48px;
}

#sidebar .side-menu li {
  height: 48px;
  background: transparent;
  margin-left: 6px;
  border-radius: 48px 0 0 48px;
  padding: 4px;
}

html[dir="rtl"] #sidebar .side-menu li {
  margin-left: 0;
  margin-right: 6px;
  border-radius: 0 48px 48px 0;
  -webkit-border-radius: 0 48px 48px 0;
  -moz-border-radius: 0 48px 48px 0;
  -ms-border-radius: 0 48px 48px 0;
  -o-border-radius: 0 48px 48px 0;
}

#sidebar .side-menu li.active {
  background: var(--bg-color);
  position: relative;
}

#sidebar .side-menu li.active::before {
  content: "";
  position: absolute;
  width: 40px;
  height: 40px;
  border-radius: 50%;
  top: -40px;
  right: 0;
  box-shadow: 20px 20px 0 var(--bg-color);
  z-index: -1;
}

html[dir="rtl"] #sidebar .side-menu li.active::before {
  left: 0;
  right: auto;
  box-shadow: -20px 20px 0 var(--bg-color);
}

#sidebar .side-menu li.active::after {
  content: "";
  position: absolute;
  width: 40px;
  height: 40px;
  border-radius: 50%;
  bottom: -40px;
  right: 0;
  box-shadow: 20px -20px 0 var(--bg-color);
  z-index: -1;
}

html[dir="rtl"] #sidebar .side-menu li.active::after {
  box-shadow: -20px -20px 0 var(--bg-color);
  right: auto;
  left: 0;
}

#sidebar .side-menu li button {
  width: 100%;
  height: 100%;
  background: var(--nav-bg);
  display: flex;
  align-items: center;
  border-radius: 48px;
  font-size: 16px;
  color: var(--text-secondary);
  white-space: nowrap;
  overflow-x: hidden;
  border: none;
  font-family: inherit;
}

#sidebar .side-menu li button .text {
  color: var(--text-secondary);

}

#sidebar .side-menu.top li.active button,
#sidebar .side-menu li.active button .text {
  color: var(--main-color);
}

#sidebar.hide .side-menu li button {
  width: calc(48px - (4px * 2));
  transition: width 0.3s ease;
}

#sidebar .side-menu li button.logout {
  color: var(--red);
}

#sidebar .side-menu.top li button:hover,
#sidebar .side-menu.top li button:hover span {
  color: var(--main-color);
}

#sidebar .side-menu li button .bx {
  min-width: calc(60px - ((4px + 6px) * 2));
  display: flex;
  justify-content: center;
  font-size: 1.3rem;
}

#content {
  position: relative;
  width: calc(100% - 280px);
  left: 280px;
  transition: 0.3s ease;
  -webkit-transition: 0.3s ease;
  -moz-transition: 0.3s ease;
  -ms-transition: 0.3s ease;
  -o-transition: 0.3s ease;
}

html[dir="rtl"] #content {
  right: 280px;
  left: auto;
}

#sidebar.hide~#content {
  width: calc(100% - 60px);
  right: auto;
  left: 60px;
}

html[dir="rtl"] #sidebar.hide~#content {
  left: auto;
  right: 60px;
}

html[dir="rtl"] #sidebar {
  right: 0;
  left: auto;
}

#content nav {
  height: 56px;
  background: var(--nav-bg);
  padding: 0 24px;
  display: flex;
  align-items: center;
  grid-gap: 24px;
  font-family: "Outfit", sans-serif;
  position: sticky;
  top: 0;
  left: 0;
  z-index: 1000;
}

#content nav::before {
  content: "";
  position: absolute;
  width: 40px;
  height: 40px;
  bottom: -40px;
  left: 0;
  border-radius: 50%;
  box-shadow: -20px -20px 0 var(--nav-bg);
}

html[dir="rtl"] #content nav::before {
  left: auto;
  right: 0;
  box-shadow: 20px -20px 0 var(--nav-bg);
}

#content nav a {
  color: var(--text-color);
}

#content nav .hamburger {
  cursor: pointer;
}

#content nav .hamburger input {
  display: none;
}

#content nav .hamburger svg {
  height: 2em;
  transition: transform 600ms cubic-bezier(0.4, 0, 0.2, 1);
}

#content nav .line {
  fill: none;
  stroke: var(--text-color);
  stroke-linecap: round;
  stroke-linejoin: round;
  stroke-width: 1.5;
  transition:
    stroke-dasharray 600ms cubic-bezier(0.4, 0, 0.2, 1),
    stroke-dashoffset 600ms cubic-bezier(0.4, 0, 0.2, 1);
}

#content nav .line-top-bottom {
  stroke-dasharray: 12 63;
}

#content nav .hamburger input:checked+svg {
  transform: rotate(-45deg);
}

#content nav .hamburger input:checked+svg .line-top-bottom {
  stroke-dasharray: 20 300;
  stroke-dashoffset: -32.42;
}

#content nav form {
  max-width: 400px;
  width: 100%;
  margin: auto;
}

#content nav form .form-input {
  display: flex;
  align-items: center;
  height: 36px;
}

#content nav form .form-input input {
  flex-grow: 1;
  padding: 0 16px;
  height: 100%;
  border: none;
  background: var(--bg-color);
  border-radius: 36px 0 0 36px;
  outline: none;
  width: 100%;
  color: var(--text-primary);
  -webkit-border-radius: 36px 0 0 36px;
  -moz-border-radius: 36px 0 0 36px;
  -ms-border-radius: 36px 0 0 36px;
  -o-border-radius: 36px 0 0 36px;
}

#content nav form .form-input button {
  width: 36px;
  height: 100%;
  display: flex;
  justify-content: center;
  align-items: center;
  background: var(--blue);
  color: var(--bg-color);
  font-size: 18px;
  border: none;
  outline: none;
  border-radius: 0 36px 36px 0;
  cursor: pointer;
  -webkit-border-radius: 0 36px 36px 0;
  -moz-border-radius: 0 36px 36px 0;
  -ms-border-radius: 0 36px 36px 0;
  -o-border-radius: 0 36px 36px 0;
}

#content nav .notification {
  font-size: 20px;
  position: relative;
}
/* ... */

